Enhanced the UI with modern fonts (Montserrat + Inter), soft gradients, improved spacing, card styling, subtle transitions, dark mode polish, and light glass-like effects.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- GOOGLE FONTS -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Montserrat:ital,wght@0,400;0,600;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>TodoApp</title>
+    <title>TaskMaster</title>
   </head>
-  <body>
+  <body class="transition-colors duration-300 bg-gradient-to-tr from-gray-50 to-white dark:from-zinc-900 dark:to-zinc-800">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
